se modifica enrutamiento

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Curriculum Bruce Wayne</title>
-    <link href="/estilos/styles.css" rel="stylesheet" />
+    <link href="./estilos/styles.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/7438e00188.js"
       crossorigin="anonymous"
@@ -15,7 +15,7 @@
     <header>
       <section>
         <article class="fotoBatman">
-          <img src="/img/logo batman.png" alt="imagen batman" />
+          <img src="./img/logo batman.png" alt="imagen batman" />
           <h1 class="titulo">Curriculum vitae Bruce Wayne</h1>
         </article>
       </section>
